css/styles.css
/* =====================================
  Universal Selectors
=======================================*/

* {
  font-family: "Merriweather", serif;
  box-sizing: border-box;
}

/* =====================================
  Lines seperating sections
=======================================*/

#header-divider-one {
  padding: 5px 15px 4px;
}

#header-divider-one:after {
  content: " ";
  display: block;
  border-bottom: 5px solid #363636;
  border-radius: 5px;
}

#header-divider-two {
  padding: 1px 15px 30px;
}

#header-divider-two:after {
  content: " ";
  display: block;
  border-bottom: 3px solid #363636;
  border-radius: 5px;
}

/* =====================================
  Required text for inside input fields
=======================================*/

#input-required-wrapper {
  position: relative;
}

#input-required-wrapper::after {
  content: "Required";
  position: relative;
  left: 345px;
  top: -65px;
  font-size: 1.1rem;
  transform: translateY(-50%);
  font-style: italic;
  color: #444;
}

/* =====================================
  Basic Styles
=======================================*/

html {
  font-size: 16px;
}

body {
  background-color: #cca43b;
  color: #fff;
}

body::-webkit-scrollbar {
  display: none;
}

header {
  padding-bottom: 35px;
}

#website-title {
  color: #fff;
  background-color: #242f40;
  text-align: center;
  padding: 12px 0px;
}

#form-intro {
  color: #363636;
  text-align: center;
  padding: 45px 0 1px;
}

#form-intro-p {
  font-size: 1rem;
  padding: 0px 30px;
  font-weight: 300;
}

main {
  margin: 0 15px;
}

form {
  padding: 0;
}

#form-section-one-wrapper {
  background-color: #363636;
  border-radius: 5px;
}

.form-labels {
  font-size: 1.2rem;
  font-weight: 300;
}

.form-sections {
  border: none;
}

.form-section-titles {
  color: #cca43b;
  margin: 20px 0 35px;
}

.contact-info-inputs,
#other-topics,
#button-wrapper,
button {
  border: hidden;
  border-radius: 5px;
  width: 100%;
}

.contact-info-inputs {
  height: 70px;
  margin: 22px 0 20px 0;
  font-size: 1.2rem;
  padding-left: 10px;
}

#zip-code {
  width: 50%;
}

#form-section-two-wrapper {
  background-color: #363636;
  border-radius: 5px;
  margin-top: 25px;
}

#newsletter-title {
  margin-bottom: 10px;
}

.check-radio-wrappers {
  padding-bottom: 20px;
}

.check-radio-inputs {
  margin: 0px 13px 0px 5px;
}

#last-check-radio-wrapper {
  padding-bottom: 40px;
}

#other-topics {
  margin: 20px 0 15px;
  padding: 7px 0 0 7px;
}

#submit-button {
  height: 87px;
  font-size: 1.7rem;
  margin-top: 25px;
  color: #cca43b;
  background-color: #242f40;
}

footer {
  color: #fff;
  background-color: #242f40;
  text-align: center;
  font-size: 1.1rem;
  margin-top: 45px;
  padding: 10px 0px;
}

.contact-info-inputs:focus,
#other-topics:focus {
  outline: 3px solid #cca43b;
}

#submit-button:focus {
  outline: 5px solid #242f40;
  background-color: #cca43b;
  color: #242f40;
}

/* =====================================
  Media Queries
=======================================*/

@media only screen and (min-width: 768px) {
  #flexbox-container-one,
  #flexbox-container-two {
    display: flex;
    justify-content: center;
    max-width: 600px;
    margin: 0 auto;
  }

  #hr-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    max-width: 600px;
    margin: 0 auto;
  }

  main {
    margin-left: 0px;
    margin-right: 0px;
  }

  .form-sections {
    display: flex;
    flex-direction: column;
    max-width: 600px;
    margin: 0 auto;
  }

  .form-labels {
    font-size: 0.8rem;
  }

  .input-wrappers {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    max-width: 600px;
    height: 80px;
  }

  #input-required-wrapper {
    height: 70px;
    margin: 1px 0px 1px auto;
  }

  #input-required-wrapper::after {
    font-size: 0.8rem;
    left: 375px;
    top: -34px;
  }

  .contact-info-inputs {
    font-size: 0.8rem;
    margin: 1px 0px 1px auto;
    width: 440px;
    height: 46px;
  }

  .col-one {
    margin: 1px auto 1px 0;
  }

  #input-label-one {
    padding-right: 78px;
  }

  #name {
    margin-top: 11px;
  }

  #email {
    margin-top: 11px;
  }

  #zip-code-title {
    margin-right: 0px;
  }

  #zip-code {
    width: 25%;
    justify-content: flex-start;
    margin-left: -510px;
  }

  #other-topics {
    font-size: 0.8rem;
  }

  .check-radio-inputs {
    accent-color: #cca43b;
  }

  #submit-button:hover {
    border: 5px solid #242f40;
    color: #242f40;
    background-color: #cca43b;
    transition: ease;
  }
}

@media only screen and (min-width: 320px) {
  #flexbox-container-one,
  #flexbox-container-two {
    display: flex;
    justify-content: center;
    max-width: 600px;
    margin: 0 auto;
  }
  #hr-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    max-width: 600px;
    margin: 0 auto;
  }

  main {
    margin-left: 0px;
    margin-right: 0px;
  }
}

